force-app/main/default/objects/custom_create345__c/custom_create345__c.object-meta.xml
<CustomObject>
    <label>Custom created object345</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects345</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>