force-app/main/default/objects/custom_create345__c/fields/custom_create_345field562__c.field-meta.xml
<CustomField>
    <fullName>custom_create_345field562__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 345field562</label>
    <type>Checkbox</type>
</CustomField>